--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>classgraph</artifactId>
             <version>4.8.115</version>
         </dependency>
+        <dependency>
+            <groupId>io.puharesource.mc</groupId>
+            <artifactId>TitleManager</artifactId>
+            <version>2.3.4</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/TitleManager-2.3.4-api.jar</systemPath>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
