--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/TitleManager-2.3.4-api.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
