--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -5,7 +5,7 @@ main: devep.ClassicHC
 api-version: 1.16
 depend:
   - WorldBorderAPI
-softdepend: [TitleManager]
+softdepend: [TitleManager, PlaceholderAPI]
 load: STARTUP
 commands:
   forceStartGame:
